# bazelSDL2_fullpack

./: BUILD.bazel  README.md
src/joystick/hidapi/: BUILD.bazel
