config_setting(
	name = "windows",
	values = {
		"cpu": "x64_windows",
	},
	visibility = ["//:__subpackages__"],
)

SDL_LINKOPTS = select({
	"//:windows": [
		"-DEFAULTLIB:user32",
		"-DEFAULTLIB:gdi32",
		"-DEFAULTLIB:winmm",
		"-DEFAULTLIB:imm32",
		"-DEFAULTLIB:ole32",
		"-DEFAULTLIB:oleaut32",
		"-DEFAULTLIB:version",
		"-DEFAULTLIB:uuid",
		"-DEFAULTLIB:shell32",
		"-DEFAULTLIB:advapi32",
		"-DEFAULTLIB:hid",
		"-DEFAULTLIB:setupapi",
		"-DEFAULTLIB:opengl32",
	],
	"//conditions:default": [],
})


#_____________SDL_2.0.9_____________
cc_library(
  name = "SDL2",
  hdrs = glob(["include/*.h"]),
  strip_include_prefix = "include",
  visibility = ["//visibility:public"],
  deps = [
    ":SDL2impl"
  ],
  linkopts = SDL_LINKOPTS,
)

cc_library(
  name = "SDL2main",
  hdrs = glob(["include/*.h"]),
  strip_include_prefix = "include",
  visibility = ["//visibility:public"],
  deps = [
    ":SDL2mainimpl"
  ],
  linkopts = SDL_LINKOPTS,
)


cc_import(
  name = "SDL2impl",
  interface_library = "lib/x64/SDL2.lib",
  shared_library = "lib/x64/SDL2.dll",
  visibility = ["//visibility:private"],
)

cc_import(
  name = "SDL2mainimpl",
  static_library = "lib/x64/SDL2main.lib",
  visibility = ["//visibility:private"],
)

#_____________SDL_Image_____________
cc_library(
  name = "SDL2image",
  hdrs = glob(["include/SDL_image.h"]),
  strip_include_prefix = "include",
  visibility = ["//visibility:public"],
  deps = [
    	":SDL2image_impl",
	":SDL2image_webp",
	":SDL2image_jpeg",
	":SDL2image_png",
	":SDL2image_zlib",
	":SDL2image_tiff",
  ],
  linkopts = SDL_LINKOPTS,
)

cc_import(
  name = "SDL2image_impl",
  interface_library = "lib/x64/SDL2_image.lib",
  shared_library = "lib/x64/SDL2_image.dll",
  visibility = ["//visibility:private"],
)

cc_import(
  name = "SDL2image_webp",
  interface_library = "lib/x64/SDL2_image.lib",
  shared_library = "lib/x64/libwebp-7.dll",
  visibility = ["//visibility:private"],
)

cc_import(
  name = "SDL2image_jpeg",
  interface_library = "lib/x64/SDL2_image.lib",
  shared_library = "lib/x64/libjpeg-9.dll",
  visibility = ["//visibility:private"],
)

cc_import(
  name = "SDL2image_tiff",
  interface_library = "lib/x64/SDL2_image.lib",
  shared_library = "lib/x64/libtiff-5.dll",
  visibility = ["//visibility:private"],
)

cc_import(
  name = "SDL2image_png",
  interface_library = "lib/x64/SDL2_image.lib",
  shared_library = "lib/x64/libpng16-16.dll",
  visibility = ["//visibility:private"],
)

cc_import(
  name = "SDL2image_zlib",
  interface_library = "lib/x64/SDL2_image.lib",
  shared_library = "lib/x64/zlib1.dll",
  visibility = ["//visibility:private"],
)

#_____________SDL_TTF_____________
cc_library(
  name = "SDL2ttf",
  hdrs = glob(["include/SDL_ttf.h"]),
  strip_include_prefix = "include",
  visibility = ["//visibility:public"],
  deps = [
    	":SDL2ttf_lib",
	":SDL2ttf_libfree",
	":SDL2ttf_zlib",
  ],
)

cc_import(
  name = "SDL2ttf_lib",
  interface_library = "lib/x64/SDL2_ttf.lib",
  shared_library = "lib/x64/SDL2_ttf.dll",
  visibility = ["//visibility:private"],
)

cc_import(
  name = "SDL2ttf_libfree",
  interface_library = "lib/x64/SDL2_ttf.lib",
  shared_library = "lib/x64/libfreetype-6.dll",
  visibility = ["//visibility:private"],
)

cc_import(
  name = "SDL2ttf_zlib",
  interface_library = "lib/x64/SDL2_ttf.lib",
  shared_library = "lib/x64/zlib1.dll",
  visibility = ["//visibility:private"],
)

#_____________SDL_Mixer_____________
cc_library(
  name = "SDL2mixer",
  hdrs = glob(["include/SDL_mixer.h"]),
  strip_include_prefix = "include",
  visibility = ["//visibility:public"],
  deps = [
    	":SDL2mixer_0", ":SDL2mixer_4",
    	":SDL2mixer_1",	":SDL2mixer_5",
    	":SDL2mixer_2", ":SDL2mixer_6",
    	":SDL2mixer_3",	":SDL2mixer_7",
	":SDL2mixer_8",
  ],
  linkopts = SDL_LINKOPTS,
)

cc_import(
  name = "SDL2mixer_0",
  interface_library = "lib/x64/SDL2_mixer.lib",
  shared_library = "lib/x64/SDL2_mixer.dll",
  visibility = ["//visibility:private"],
)


cc_import(
  name = "SDL2mixer_1",
  interface_library = "lib/x64/SDL2_mixer.lib",
  shared_library = "lib/x64/libvorbisfile-3.dll",
  visibility = ["//visibility:private"],
)


cc_import(
  name = "SDL2mixer_2",
  interface_library = "lib/x64/SDL2_mixer.lib",
  shared_library = "lib/x64/libvorbis-0.dll",
  visibility = ["//visibility:private"],
)


cc_import(
  name = "SDL2mixer_3",
  interface_library = "lib/x64/SDL2_mixer.lib",
  shared_library = "lib/x64/libopusfile-0.dll",
  visibility = ["//visibility:private"],
)


cc_import(
  name = "SDL2mixer_4",
  interface_library = "lib/x64/SDL2_mixer.lib",
  shared_library = "lib/x64/libopus-0.dll",
  visibility = ["//visibility:private"],
)


cc_import(
  name = "SDL2mixer_5",
  interface_library = "lib/x64/SDL2_mixer.lib",
  shared_library = "lib/x64/libogg-0.dll",
  visibility = ["//visibility:private"],
)


cc_import(
  name = "SDL2mixer_6",
  interface_library = "lib/x64/SDL2_mixer.lib",
  shared_library = "lib/x64/libmpg123-0.dll",
  visibility = ["//visibility:private"],
)


cc_import(
  name = "SDL2mixer_7",
  interface_library = "lib/x64/SDL2_mixer.lib",
  shared_library = "lib/x64/libmodplug-1.dll",
  visibility = ["//visibility:private"],
)


cc_import(
  name = "SDL2mixer_8",
  interface_library = "lib/x64/SDL2_mixer.lib",
  shared_library = "lib/x64/libFLAC-8.dll",
  visibility = ["//visibility:private"],
)
















