#_____________SDL_2.0.9_____________

config_setting(
	name = "windows",
	values = {
		"cpu": "x64_windows",
	},
	visibility = ["//:__subpackages__"],
)

SDL_LINKOPTS = select({
	"//:windows": [
		"-DEFAULTLIB:user32",
		"-DEFAULTLIB:gdi32",
		"-DEFAULTLIB:winmm",
		"-DEFAULTLIB:imm32",
		"-DEFAULTLIB:ole32",
		"-DEFAULTLIB:oleaut32",
		"-DEFAULTLIB:version",
		"-DEFAULTLIB:uuid",
		"-DEFAULTLIB:shell32",
		"-DEFAULTLIB:advapi32",
		"-DEFAULTLIB:hid",
		"-DEFAULTLIB:setupapi",
		"-DEFAULTLIB:opengl32",
	],
	"//conditions:default": [],
})

cc_library(
	name = "SDL2_hdrs",
	hdrs = glob(["include/**/*.h"]),
	strip_include_prefix = "include",
	visibility = ["//visibility:public"],
)

cc_library(
	name = "SDL2base",
	srcs = [
		"src/SDL_assert.c",
		"src/SDL_dataqueue.c",
		"src/SDL_error.c",
		"src/SDL_hints.c",
		"src/SDL_log.c",
		"src/SDL.c",
	],
	deps = ["//src/thread:thread"],
	hdrs = glob(["include/**/*.h", "src/*.h"]),
	includes = ["include", "src"],
	visibility = ["//:__subpackages__"],
)

cc_library(
	name = "SDL2internal",
	hdrs = glob(["include/**/*.h", "src/*.h"]),
	includes = ["include", "src"],
	visibility = ["//:__subpackages__"],
)

cc_library(
	name = "SDL2",
	hdrs = glob(["include/**/*.h"]),
	includes = ["include", "src"],
	srcs = glob(["include/*.h", "src/*.c", "src/*.h"]),
	deps = [
		":SDL2internal",
		"//src/atomic:atomic",
		"//src/audio:audio",
		"//src/core:core",
		"//src/cpuinfo:cpuinfo",
		"//src/dynapi:dynapi",
		"//src/events:events",
		"//src/file:file",
		"//src/filesystem:filesystem",
		"//src/haptic:haptic",
		"//src/hidapi:hidapi",
		"//src/joystick:joystick",
		"//src/libm:libm",
		"//src/loadso:loadso",
		"//src/main:main",
		"//src/power:power",
		"//src/render:render",
		"//src/sensor:sensor",
		"//src/stdlib:stdlib",
		"//src/thread:thread",
		"//src/timer:timer",
		"//src/video:video",
	],
	linkopts = SDL_LINKOPTS,
	visibility = ["//visibility:public"],
)

cc_library(
	name = "SDL2test",
	hdrs = glob(["include/SDL_test*.h"]),
	srcs = glob(["src/test/**/*.c"]),
	deps = ["//:SDL2"],
	visibility = ["//test:__subpackages__"],
)

cc_import(
  name = "SDL2impl",
  interface_library = "lib/x64/SDL2.lib",
  shared_library = "lib/x64/SDL2.dll",
  visibility = ["//visibility:private"],
)

cc_import(
  name = "SDL2mainimpl",
  static_library = "lib/x64/SDL2main.lib",
  visibility = ["//visibility:private"],
)

#_____________SDL_Image_____________
cc_library(
  name = "SDL2image",
  hdrs = glob(["SDL_image.h"]),
  visibility = ["//visibility:public"],
  deps = [
    	":SDL2image_impl",
	":SDL2image_webp",
	":SDL2image_jpeg",
	":SDL2image_png",
	":SDL2image_zlib",
	":SDL2image_tiff",
  ],
  linkopts = SDL_LINKOPTS,
)

cc_import(
  name = "SDL2image_impl",
  interface_library = "lib/x64/SDL2_image.lib",
  shared_library = "lib/x64/SDL2_image.dll",
  visibility = ["//visibility:private"],
)

cc_import(
  name = "SDL2image_webp",
  interface_library = "lib/x64/SDL2_image.lib",
  shared_library = "lib/x64/libwebp-7.dll",
  visibility = ["//visibility:private"],
)

cc_import(
  name = "SDL2image_jpeg",
  interface_library = "lib/x64/SDL2_image.lib",
  shared_library = "lib/x64/libjpeg-9.dll",
  visibility = ["//visibility:private"],
)

cc_import(
  name = "SDL2image_tiff",
  interface_library = "lib/x64/SDL2_image.lib",
  shared_library = "lib/x64/libtiff-5.dll",
  visibility = ["//visibility:private"],
)

cc_import(
  name = "SDL2image_png",
  interface_library = "lib/x64/SDL2_image.lib",
  shared_library = "lib/x64/libpng16-16.dll",
  visibility = ["//visibility:private"],
)

cc_import(
  name = "SDL2image_zlib",
  interface_library = "lib/x64/SDL2_image.lib",
  shared_library = "lib/x64/zlib1.dll",
  visibility = ["//visibility:private"],
)

#_____________SDL_TTF_____________
cc_library(
  name = "SDL2ttf",
  hdrs = glob(["SDL_ttf.h"]),
  visibility = ["//visibility:public"],
  deps = [
    	":SDL2ttf_lib",
	":SDL2ttf_libfree",
	":SDL2ttf_zlib",
  ],
)

cc_import(
  name = "SDL2ttf_lib",
  interface_library = "lib/x64/SDL2_ttf.lib",
  shared_library = "lib/x64/SDL2_ttf.dll",
  visibility = ["//visibility:private"],
)

cc_import(
  name = "SDL2ttf_libfree",
  interface_library = "lib/x64/SDL2_ttf.lib",
  shared_library = "lib/x64/libfreetype-6.dll",
  visibility = ["//visibility:private"],
)

cc_import(
  name = "SDL2ttf_zlib",
  interface_library = "lib/x64/SDL2_ttf.lib",
  shared_library = "lib/x64/zlib1.dll",
  visibility = ["//visibility:private"],
)

#_____________SDL_Mixer_____________
cc_library(
  name = "SDL2mixer",
  hdrs = glob(["SDL_mixer.h"]),
  visibility = ["//visibility:public"],
  deps = [
    	":SDL2mixer_0", ":SDL2mixer_4",
    	":SDL2mixer_1",	":SDL2mixer_5",
    	":SDL2mixer_2", ":SDL2mixer_6",
    	":SDL2mixer_3",	":SDL2mixer_7",
	":SDL2mixer_8",
  ],
  linkopts = SDL_LINKOPTS,
)

cc_import(
  name = "SDL2mixer_0",
  interface_library = "lib/x64/SDL2_mixer.lib",
  shared_library = "lib/x64/SDL2_mixer.dll",
  visibility = ["//visibility:private"],
)


cc_import(
  name = "SDL2mixer_1",
  interface_library = "lib/x64/SDL2_mixer.lib",
  shared_library = "lib/x64/libvorbisfile-3.dll",
  visibility = ["//visibility:private"],
)


cc_import(
  name = "SDL2mixer_2",
  interface_library = "lib/x64/SDL2_mixer.lib",
  shared_library = "lib/x64/libvorbis-0.dll",
  visibility = ["//visibility:private"],
)


cc_import(
  name = "SDL2mixer_3",
  interface_library = "lib/x64/SDL2_mixer.lib",
  shared_library = "lib/x64/libopusfile-0.dll",
  visibility = ["//visibility:private"],
)


cc_import(
  name = "SDL2mixer_4",
  interface_library = "lib/x64/SDL2_mixer.lib",
  shared_library = "lib/x64/libopus-0.dll",
  visibility = ["//visibility:private"],
)


cc_import(
  name = "SDL2mixer_5",
  interface_library = "lib/x64/SDL2_mixer.lib",
  shared_library = "lib/x64/libogg-0.dll",
  visibility = ["//visibility:private"],
)


cc_import(
  name = "SDL2mixer_6",
  interface_library = "lib/x64/SDL2_mixer.lib",
  shared_library = "lib/x64/libmpg123-0.dll",
  visibility = ["//visibility:private"],
)


cc_import(
  name = "SDL2mixer_7",
  interface_library = "lib/x64/SDL2_mixer.lib",
  shared_library = "lib/x64/libmodplug-1.dll",
  visibility = ["//visibility:private"],
)


cc_import(
  name = "SDL2mixer_8",
  interface_library = "lib/x64/SDL2_mixer.lib",
  shared_library = "lib/x64/libFLAC-8.dll",
  visibility = ["//visibility:private"],
)
















